@@ -1,20 +1,19 @@
+/*eslint react/jsx-key:0*/
 import React from 'react';
 import {Link} from 'react-router';
 import jQuery from 'jquery';
 import ApiMixin from '../mixins/apiMixin';
-import Count from '../components/count';
-import GroupState from '../mixins/groupState';
+import Avatar from '../components/avatar';
 import LoadingError from '../components/loadingError';
 import LoadingIndicator from '../components/loadingIndicator';
 import Pagination from '../components/pagination';
 import TimeSince from '../components/timeSince';
 import {isUrl, percent, deviceNameMapper} from '../utils';
-import {t, tn} from '../locale';
+import {t} from '../locale';
 
 const GroupTagValues = React.createClass({
   mixins: [
-    ApiMixin,
-    GroupState
+    ApiMixin
   ],
 
   getInitialState() {
@@ -47,7 +46,7 @@ const GroupTagValues = React.createClass({
       error: false
     });
 
-    this.api.request('/issues/' + this.getGroup().id + '/tags/' + params.tagKey + '/', {
+    this.api.request(`/issues/${params.groupId}/tags/${params.tagKey}/`, {
       success: (data) => {
         this.setState({
           tagKey: data,
@@ -62,7 +61,7 @@ const GroupTagValues = React.createClass({
       }
     });
 
-    this.api.request('/issues/' + this.getGroup().id + '/tags/' + params.tagKey + '/values/?' + querystring, {
+    this.api.request(`/issues/${params.groupId}/tags/${params.tagKey}/values/?${querystring}`, {
       success: (data, _, jqXHR) => {
         this.setState({
           tagValueList: data,
@@ -79,6 +78,10 @@ const GroupTagValues = React.createClass({
     });
   },
 
+  getUserDisplayName(item) {
+    return item.email || item.username || item.identifier || item.ipAddress || item.value;
+  },
+
   render() {
     if (this.state.loading) {
       return <LoadingIndicator />;
@@ -86,11 +89,10 @@ const GroupTagValues = React.createClass({
       return <LoadingError onRetry={this.fetchData} />;
     }
 
+    let {orgId, projectId} = this.props.params;
     let tagKey = this.state.tagKey;
     let children = this.state.tagValueList.map((tagValue, tagValueIdx) => {
       let pct = percent(tagValue.count, tagKey.totalValues).toFixed(2);
-      let orgId = this.getOrganization().slug;
-      let projectId = this.getProject().slug;
       return (
         <tr key={tagValueIdx}>
           <td className="bar-cell">
@@ -101,10 +103,20 @@ const GroupTagValues = React.createClass({
             <Link
                 to={{
                   pathname: `/${orgId}/${projectId}/`,
-                  query: {query: tagKey.key + ':' + '"' + tagValue.value + '"'}
+                  query: {query: `${tagKey.key}:"${tagValue.value}"`}
                 }}>
-              {deviceNameMapper(tagValue.name)}
+              {tagKey.key === 'user' ? [
+                <Avatar user={tagValue} size={16} className="avatar" />,
+                <span style={{marginLeft: 10}}>{this.getUserDisplayName(tagValue)}</span>
+              ] :
+                deviceNameMapper(tagValue.name)
+              }
             </Link>
+            {tagValue.email &&
+              <a href={`mailto:${tagValue.email}`} className="external-icon">
+                <em className="icon-envelope" />
+              </a>
+            }
             {isUrl(tagValue.value) &&
               <a href={tagValue.value} className="external-icon">
                 <em className="icon-open" />
@@ -121,22 +133,15 @@ const GroupTagValues = React.createClass({
     return (
       <div>
         <h3>
-          {tagKey.name + ' '}
-          <small>{tn(
-            '%2$d unique historical value',
-            '%2$d unique historical values',
-            tagKey.uniqueValues,
-            <Count value={tagKey.uniqueValues} />
-          )}</small>
+          {tagKey.key == 'user' ? t('Affected Users') : tagKey.name}
+          <a href="export/" className="btn btn-default btn-sm"
+             style={{marginLeft: 10}}>{t('Export to CSV')}</a>
         </h3>
-        <div className="alert alert-info alert-block">
-          {t('Data is based on events seen in the last 7 days.')}
-        </div>
         <table className="table table-striped">
           <thead>
             <tr>
               <th style={{width: 30}}>%</th>
-              <th>{t('Value')}</th>
+              <th></th>
               <th style={{width: 200}}>{t('Last Seen')}</th>
             </tr>
           </thead>
@@ -145,6 +150,7 @@ const GroupTagValues = React.createClass({
           </tbody>
         </table>
         <Pagination pageLinks={this.state.pageLinks}/>
+        <p><small>{t('Note: Percentage of issue is based on events seen in the last 7 days.')}</small></p>
       </div>
     );
   }
